# galarp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  TODO.txt  noxfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  getting_started.rst  index.rst  installation.rst  plotting.rst  post_analysis.rst  rp_profile.rst  running.rst  satellite_init.rst  shadows.rst
galarp/: __init__.py  config.py  densities.py  particle_grids.py  particles.py  plotting.py  rampressure.py  shadows.py  tests.py  utils.py  winds.py
galarp.egg-info/: PKG-INFO  SOURCES.txt
galarp/.ipynb_checkpoints/: particle_grids-checkpoint.py  plotting-checkpoint.py  rampressure-checkpoint.py  shadows-checkpoint.py  utils-checkpoint.py  winds-checkpoint.py
paper/: 0-1-BackToBasics.ipynb  0-1-FullDynamicShadow copy.ipynb  0-1-FullDynamicShadow-Masses.ipynb  0-1-FullDynamicShadow.ipynb  0-2-Schulz+Struck.ipynb  0-3-ArrayInputs.ipynb  0-4-BetterParticles.ipynb  0-5-GalarpSpeedups.ipynb  0-RBDuplicate.ipynb  0-Shadowing.ipynb  0-Zhu2023Duplicate.ipynb  1-0-FullSuite.ipynb  1-0-FullSuiteAnalysis.ipynb  1-1-RBDuplicate.ipynb  1-2-Zhu2023Duplicate.ipynb  1-3-Vollmer2001Duplicate.ipynb  1-BaseExamples copy.ipynb  1-BaseExamples.ipynb  2-2-BaseExamples copy.ipynb  2-StrippingRadius.ipynb  3-1-StrippingRadius.ipynb  3-2-1DProfiles.ipynb  ICMinflow_1e14_group_profile_45degree_wind_stacked_pericenter_data.in  ICMinflow_data.in  create_icminflow.ipynb  satellite_orbits_and_host_density_profile_clean.ipynb
scripts/: galarp_cli.py
(+84 files in other folders)
