[project]
name = "galarp"
authors = [
    {name = "Harrison Souchereau", email = "hsouchereau@outlook.com"},
]
description = "Ram pressure interactions in Gala"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["astronomy", "dynamics"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "astropy>=5.0",
    "gala >=1.8"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://galarp.readthedocs.io/en/latest/"
Repository = "https://github.com/HSouch/galarp/"


[project.optional-dependencies]
shared = [
    "matplotlib",
    "tqdm",
]


[tool.ruff]
exclude = [
    "__pycache__",
    ".nox",
    ".pytest_cache",
    "tox",
    "__init__"
]

ignore = ["F403"]

line-length = 88

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"